Add circe API with tests and benchmarks